--- a/app/styles/LoginPage.scss
+++ b/app/styles/LoginPage.scss
@@ -38,13 +38,17 @@
         cursor: pointer;
       }
     }
-    .register-form, .forgot-password-form, .forgot-login-form {
-      display: none;
-    }
+    
     h1 {
       font-size: 40px;
       margin-bottom: 25px;
       color: #B45D24;
     }
+  }
+  .shown{
+    display: block;
+  }
+  .hidden{
+    display: none;
   }
 }
