--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -46,5 +46,11 @@ cursor: pointer;
 .zaloguj-zarejestruj{
     @extend .button;
     width:100%;
-    height: 45px;;
+    height: 45px;
+}
+
+.sprawdz-szczegoly{
+  @extend .button;
+  width:95%;
+  height:30px;
 }
