--- a/app/styles/beer-base-page.scss
+++ b/app/styles/beer-base-page.scss
@@ -3,15 +3,55 @@
 .form {
     z-index: 1;
     background: #FFFFFF;
-    max-width: 90%;
+    max-width: 100%;
+    margin: 0 auto 100px;
+    padding: 25px;
+    text-align: center;
+    border: 2px solid #683C1F;
+    height: 1500px;
+}
+
+.beer-form{
+    z-index: 1;
+    background: #FFFFFF;
+    width:500px;
+    height: 250px;
     margin: 0 auto 100px;
     padding: 25px;
     text-align: center;
     border: 2px solid #683C1F;
 }
 
-.beer-form{
-    
+.wrapper {
+    display: grid;
+    grid-template-columns: 500px 615px;
+    grid-template-rows: 300px 300px 300px 300px 300px;
 }
 
+.image-form{
+    z-index: 1;
+    background: #FFFFFF;
+    height: 195px;
+}
+
+.info-form{
+    z-index: 1;
+    background: #FFFFFF;
+    max-height: 195px;
+
+}
+
+.beer-wrapper{
+    display: grid;
+    grid-template-columns: 30% 70%;
+}
+
+h1{
+    color:#B45D24;
+    font-size:31px;
+}
+
+p{
+    padding: 0 10px;
+}
 }
