--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -49,8 +49,20 @@ cursor: pointer;
     height: 45px;
 }
 
-.sprawdz-szczegoly{
+.sprawdz-szczegoly-beer{
   @extend .button;
   width:95%;
+  height:30px;
+}
+
+.sprawdz-szczegoly-brewery{
+  @extend .button;
+  width:100%;
+  height:30px;
+}
+
+.wyslij-zgloszenie{
+  @extend .button;
+  width:20%;
   height:30px;
 }
