--- a/app/styles/input.scss
+++ b/app/styles/input.scss
@@ -1,4 +1,4 @@
-#myInput {
+.my-input {
     width: 250px;
     height: 50px;
     font-size: 16px;
@@ -6,8 +6,7 @@
     border: 2px solid #683C1F;
     margin-bottom: 12px;
   }
-  
-.ustawienieInputa{
+.ustawienie-inputa {
   float:left;
   margin-right:15px;
 }
