--- a/app/styles/LoginPage.scss
+++ b/app/styles/LoginPage.scss
@@ -1,6 +1,5 @@
-.LoginPage{
-
-  .form {
+.login-page {
+ .form {
     position: relative;
     z-index: 1;
     background: #FFFFFF;
@@ -34,17 +33,16 @@
         cursor: pointer;
       }
     }
-    
     h1 {
       font-size: 40px;
       margin-bottom: 25px;
       color: #B45D24;
     }
   }
-  .shown{
+  .shown {
     display: block;
   }
-  .hidden{
+  .hidden {
     display: none;
   }
 }
