--- a/app/styles/contact-page.scss
+++ b/app/styles/contact-page.scss
@@ -1,34 +1,34 @@
-.contact-page{
-
+.contact-page {
 .form {
     z-index: 1;
     background: #FFFFFF;
     max-width: 100%;
-    margin-top: 50px;
-    height:600px;
+    margin-top: 20px;
+    height:545px;
     border: 2px solid #683C1F;
 }    
-
-.frame{
-    border: 2px solid #683C1F;
-    height:55px;
-    width:100%;
-}
-
-p{
+p {
     font-family:'Roboto';
     margin-left:35px;
     margin-right:30px;
     font-size:34px;
     text-align:justify;
 }
-
-.myInput {
+.my-input {
     width: 95%;
     height: 50px;
     font-size: 16px;
-    border: 2px solid #683C1F;
+    border: 1px solid #683C1F;
     margin:15px 0px 0px 27px;
+    padding:10px;
 }
-
+.textarea{
+    width: 95%;
+    height: 250px;
+    font-size: 16px;
+    border: 1px solid #683C1F;
+    margin:15px 0px 0px 27px;
+    padding:10px;
+    resize: none;
+}
 }
