--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,3 +2,9 @@
     //background-url: (~assets/image/myimage)
     //background-url: (~/assets/404.png")
 }
+.fileInput {
+    opacity: 0;
+    margin-left: -40px;
+    width: 40px;
+    height: 45px;
+}
