--- a/app/styles/single-beer-page.scss
+++ b/app/styles/single-beer-page.scss
@@ -1,5 +1,152 @@
+.single-beer-page{
+    text-align: center;
 .wrapper {
     display: grid;
-    grid-template-columns: 100px 100px 100px;
-    grid-template-rows: 100px 100px 100px;
+    grid-template-columns: 30% 40% 30%;
+    grid-template-rows: 20% 40% 40%;
+    height: 500px;
+    
+    }
+.item1{   // ocena uzytkownika
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    margin:auto;
+}
+.item2{   // nazwa piwa
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    margin:5px;
+}
+.item3{   // ocena ogolna piwa
+    grid-column-start: 3;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    margin:5px;
+}
+.item4{   // obrazek piwa
+    grid-row-start: 2;
+    grid-row-end: 4;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    margin:5px;
+}
+.item5{   // szczegoly piwa
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 2;
+    border: 2px solid #683C1F;
+    margin:5px;
+}
+.item6{  // podobne piwa
+    grid-column-start: 3;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    border: 2px solid #683C1F;
+    margin:5px;
+}
+.item7{   // opis piwa
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 3;
+    border: 2px solid #683C1F;
+    margin:5px;
+}
+
+.rating {
+    float:left;
+}
+
+.rating:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+    clip:rect(0,0,0,0);
+}
+
+.rating:not(:checked) > label {
+    float:right;
+    width:1em;
+    padding:0 .1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:200%;
+    line-height:1.2;
+    color:#ddd;
+    text-shadow:1px 1px #bbb, 2px 2px #666, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+.rating:not(:checked) > label:before {
+    content: '★ ';
+}
+
+.rating > input:checked ~ label {
+    color: #f70;
+    text-shadow:1px 1px #c60, 2px 2px #940, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+.rating:not(:checked) > label:hover,
+.rating:not(:checked) > label:hover ~ label {
+    color: gold;
+    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+.rating > input:checked + label:hover,
+.rating > input:checked + label:hover ~ label,
+.rating > input:checked ~ label:hover,
+.rating > input:checked ~ label:hover ~ label,
+.rating > label:hover ~ input:checked ~ label {
+    color: #ea0;
+    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+.rating > label:active {
+    position:relative;
+    
+}
+
+legend{
+    color:#B45D24;
+    font-size: 20px;
+}
+h1 {
+    color:#B45D24;
+    font-size: 40px;
+}
+h2 {
+    color:#B45D24;
+    font-size: 30px;
+    float:left;
+    padding:10px 0 10px 0;
+}
+p{
+    color:#B45D24;
+    font-size: 20px;
+    margin: 0px;
+    padding-top:5px;
+}
+.podobne-piwo{
+    width:80%;
+    border: 2px solid #683C1F;
+    height: 80px;
+    margin:6px auto;
+    
+}
+.textarea{
+    width: 100%;
+    height: 100px;
+    font-size: 16px;
+    border: 2px solid #683C1F;
+    padding:10px;
+    resize: none;
+}
+
+
 }
