cale gowno tam tego jest

--- a/app/styles/single-beer-page.scss
+++ b/app/styles/single-beer-page.scss
@@ -1,5 +1,11 @@
-.wrapper {
-    display: grid;
-    grid-template-columns: 100px 100px 100px;
-    grid-template-rows: 100px 100px 100px;
-}
+.single-beer-page{
+    .wrapper {
+        display: grid;
+        grid-template-columns: 100px 100px 100px;
+        grid-template-rows: 100px 100px 100px;
+    }
+    
+    
+    
+    
+    }
