--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -86,3 +86,9 @@ cursor: pointer;
   margin-top:20px;
   margin-right: 25px;
 }
+.fileInput {
+  @extend .button;  
+  opacity: 0;
+  position: absolute;
+  width: 50%;
+}
