--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -117,3 +117,8 @@ cursor: pointer;
   margin-right: 5px;
   margin-left: 5px;
 }
+.dodaj-do-ulubionych{
+  @extend .button;
+  width:186px;
+  margin-bottom:15px;
+}
