ale duzo nowych rzeczy o tyle az

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,5 @@
 #root {
     //background-url: (~assets/image/myimage)
-    //background-url: (~/assets/404.png")
+    background-image: url('../assets/tlostronki.png');
+    min-height:1000px ;
 }
