--- a/app/styles/LoginPage.scss
+++ b/app/styles/LoginPage.scss
@@ -17,7 +17,7 @@
       padding: 8px;
       box-sizing: border-box;
       font-size: 18px;
-      border: 1px solid #683C1F;
+      border-bottom: 1px solid #683C1F;
       color: #777777;
       &:required {
         box-shadow: none;
