--- a/app/styles/beer-base-page.scss
+++ b/app/styles/beer-base-page.scss
@@ -5,23 +5,20 @@
 .form {
     z-index: 1;
     max-width: 100%;
-    margin: 0 auto 100px;
     padding: 25px;
     text-align: center;
 }
 .beer-form {
     z-index: 1;
-    width:500px;
     height: 250px;
-    margin: 0 auto 100px;
     padding: 25px;
     text-align: center;
     border: 1px solid #683C1F;
 }
 .wrapper {
     display: grid;
-    grid-template-columns: 500px 615px;
-    grid-template-rows: repeat(var(--rows), 300px);
+    grid-template-columns: 50% 50%;
+    grid-template-rows: repeat(var(--rows), 250px);
 }
 .image-form {
     z-index: 1;
@@ -39,5 +36,8 @@
 h1 {
     color:#B45D24;
     font-size:31px;
+}
+p{
+    color:#B45D24;
 }
 }
