--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -1,6 +1,6 @@
 .button {
 background: white;
-color: black;
+color:#B45D24;;
 border: 2px solid #683C1F;
 font-size: 18px;
 transition: .6s;
@@ -76,10 +76,6 @@ cursor: pointer;
   @extend .button;
   width:60%;
 }
-.wybierz-plik {
-  @extend .button;
-  width:50%;
-}
 .dodaj-piwo{
   @extend .button;
   width:170px;
@@ -90,7 +86,7 @@ cursor: pointer;
   @extend .button;  
   opacity: 0;
   position: absolute;
-  width: 50%;
+  width: 14%;
 }
 .dodaj-komentarz{
   @extend .button;
@@ -116,4 +112,16 @@ cursor: pointer;
   @extend .button;
   width:186px;
   margin-bottom:15px;
+}
+
+input[type="file"] {
+  display: none;
+}
+.custom-file-upload{
+  @extend .button;
+  width:50%;
+}
+.pagination-button{
+  @extend .button;
+  width:60px;
 }
