--- a/app/styles/input.scss
+++ b/app/styles/input.scss
@@ -1,12 +1,24 @@
-.my-input {
+.my-input3 {
     width: 250px;
     height: 50px;
     font-size: 16px;
     padding: 10px 20px 12px ;
     border: 2px solid #683C1F;
-    margin-bottom: 12px;
+    margin-left:145px;
   }
-.ustawienie-inputa {
+.ustawienie-inputa3 {
   float:left;
-  margin-right:15px;
+  margin-right:35px;
+}
+.my-input4 {
+  width: 250px;
+  height: 50px;
+  font-size: 16px;
+  padding: 10px 20px 12px ;
+  border: 2px solid #683C1F;
+  margin-left:270px;
+}
+.ustawienie-inputa4 {
+float:left;
+margin-right:35px;
 }
