--- a/app/styles/loader.scss
+++ b/app/styles/loader.scss
@@ -30,7 +30,7 @@
   .sk-cube-grid .sk-cube {
     width: 33%;
     height: 33%;
-    background-color: #3D4944;
+    background-color: #683C1F;
     float: left;
     -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
     animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
