--- a/app/styles/admin-page.scss
+++ b/app/styles/admin-page.scss
@@ -1,4 +1,7 @@
 .admin-page{
+    .admin-page-button{
+        text-align: center
+    }
     .form1 {
         z-index: 1;
         background: #FFFFFF;
@@ -15,6 +18,12 @@
         padding-bottom: 8px;
         text-align: center;
     }
+    h2 {
+        font-size: 26px;
+    }
+    h3 {
+        font-size: 22px;
+    }
     .item1 {
         grid-column-start: 1;
         grid-column-end: 1;
@@ -22,5 +31,15 @@
     .item2 {
         grid-column-start: 2;
         grid-column-end: 2;
+    }
+    .form2 {
+        z-index: 1;
+        background: #FFFFFF;
+        max-width: 100%;
+        margin: 0 auto 100px;
+        padding: 25px;
+        display: grid;
+        grid-template-columns: 100%;
+        height: 650px;
     }
 }
