--- a/app/styles/contact-page.scss
+++ b/app/styles/contact-page.scss
@@ -5,13 +5,6 @@
     margin-top: 20px;
     height:545px;
 }    
-p {
-    font-family:'Roboto';
-    margin-left:35px;
-    margin-right:30px;
-    font-size:34px;
-    text-align:justify;
-}
 .my-input {
     width: 95%;
     height: 50px;
@@ -28,5 +21,10 @@ p {
     margin:15px 0px 0px 27px;
     padding:10px;
     resize: none;
+}
+h1 {
+    color:#B45D24;
+    font-size: 30px;
+    text-align:center;
 }
 }
