--- a/app/styles/brewery-base-page.scss
+++ b/app/styles/brewery-base-page.scss
@@ -39,11 +39,15 @@
 h1 {
     color:#B45D24;
     font-size:31px;
-    padding-bottom:15px;
+    padding-bottom:30px;
 }
 p {
     float:left;
     margin: 0px;
     color:#B45D24;
+}
+img{
+    max-width:230px;
+    max-height: 210px;
 }
 }
