--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -57,6 +57,7 @@ cursor: pointer;
   @extend .button;
   width:100%;
   height:30px;
+  margin-top:40px;
 }
 .wyslij-zgloszenie {
   @extend .button;
