--- a/app/styles/profile-page.scss
+++ b/app/styles/profile-page.scss
@@ -99,4 +99,12 @@
         margin:auto;
         text-align:center;
       }
+      img{
+        max-width:190px;
+        max-height: 190px;
+    }
+    .img-ulubione{
+        max-width:30px;
+        max-height: 40px;
+    }
 }
