--- a/app/styles/single-brewery-page.scss
+++ b/app/styles/single-brewery-page.scss
@@ -67,4 +67,12 @@ p{
     font-size:30px;
     margin-top:8px;
 }
+img{
+    max-width:550px;
+    max-height: 250px;
+}
+.img-produkty{
+    max-width:50px;
+    max-height: 70px;
+}
 }
