--- a/app/styles/single-beer-page.scss
+++ b/app/styles/single-beer-page.scss
@@ -184,15 +184,21 @@ h3 {
     margin-bottom:25px;
 }
 .p-ocena{
-    font-size:80px;
+    font-size:45px;
+    margin-left:25px;
+    margin-top:15px;
+}
+.data{
+    color:#B45D24;
+    font-size: 20px;
+    margin-top:-15px;
+
 }
 .p-dodane-przez{
     color:#B45D24;
     font-size: 15px;
     margin-top:-10px;
 }
-
-
 @mixin transform($transforms) {
     -moz-transform: $transforms;
     -o-transform: $transforms;
@@ -256,5 +262,9 @@ img{
 .img-podobne{
     max-width:40px;
     max-height: 60px;
+}
+.img-avatar{
+    max-width: 90px;
+    max-height: 90px;
 }
 }
